k8s/dev/tg-send-messages-service_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tg-send-messages-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: tg-send-messages
  template:
    metadata:
      labels:
        components: tg-send-messages
    spec:
      containers:
      - name: tg-send-messages
        image: tg-bot-manager
        imageTag: dev
        imagePullPolicy: Never
        command : ["php"]
        args : ["bin/console", "app:telegram-bot:send-message:service:run"]
        resources:
          requests:
            cpu: "500m"
            memory: "500Mi"
        volumeMounts:
        - name: var-vol
          mountPath: /var/www/html/var
          subPath: var
        - name: app-env
          mountPath: /var/www/html/.env
          subPath: .env
      volumes:
      - name: var-vol
        persistentVolumeClaim:
          claimName: tg-var-pvc
      - name: app-env
        configMap:
          name: tg-app-configmap
          defaultMode: 420
