k8s/dev/webserve_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tg-webserver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: webserver
  template:
    metadata:
      labels:
        components: webserver
    spec:
      containers:
      - name: tg-webserver
        image: tg-bot-manager
        imageTag: dev
        imagePullPolicy: Never
        command : ["symfony"]
        args : ["serve"]
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "500m"
            memory: "500Mi"
        volumeMounts:
        - name: var-vol
          mountPath: /var/www/html/var
          subPath: var
        - name: app-env
          mountPath: /var/www/html/.env
          subPath: .env
      volumes:
      - name: var-vol
        persistentVolumeClaim:
          claimName: tg-var-pvc
      - name: app-env
        configMap:
          name: tg-app-configmap
          defaultMode: 420
