k8s/dev/services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: tg-webserver-clusterip
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
  selector:
    components: webserver
