k8s/dev/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tg-ingress
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true" # включает base url
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
  - host: tg.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tg-webserver-clusterip
            port: 
              number: 80
